--- a/web.3.4.config
+++ b/web.3.4.config
@@ -10,6 +10,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
+    <globalization culture="sv-SE" uiCulture="sv-SE"/>
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
