Changed globalization tag

--- a/web.3.4.config
+++ b/web.3.4.config
@@ -10,13 +10,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
-    <globalization
-      fileEncoding="utf-8"
-      requestEncoding="utf-8"
-      responseEncoding="utf-8"
-      culture="en-US"
-      uiCulture"sv-SE"
-    />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="" culture="en-US" uiCulture"sv-SE" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
