--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 click==6.7
+coverage==4.5
 Flask==0.12.2
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+pkg-resources==0.0.0
+selenium==3.8.1
 Werkzeug==0.14.1
 WTForms==2.1
